# regex

./: .gitignore  README.md
paper/SBLP2016/: main.bib  makefile  regex.tex  reviews.txt
paper/SBLP2016/slides/: slides.tex
paper/SBLP2017/: main.bib  makefile  paper.lagda  paper.lhs  paper.ptb  paper.tex  references.bib
paper/SCP/: answer.tex  art.tex  highlights.docx  main.bib  makefile  regex.lagda  regex.tex  review1.md  reviewers.docx  thmtools.sty
paper/SCP/auto/: answer.el
src/Agda/: Everything.agda  makefile
src/Agda/Base/: Basics.agda  EmptynessTest.agda  Regex.agda
src/Agda/BitCoded/: BitRegex.agda  ParseTree.agda  Recursion.agda
src/Agda/Derivative/: Antimirov.agda  Brzozowski.agda  Smart.agda
src/Agda/Parsing/: Brzozowski.agda
src/Agda/Pointed/: PointedRegex.agda
src/Agda/Prefix/: BitPrefix.agda  PrefixAntimirov.agda  PrefixBrzozowski.agda  PrefixDef.agda
src/Agda/Substring/: BitSubstring.agda  SubstringAntimirov.agda  SubstringBrzozowski.agda  SubstringDef.agda
src/Agda/Tool/: Main.agda
src/Agda/Tool/Bindings/: Arguments.agda  Primitives.agda
src/Agda/Tool/Parser/: Combinators.agda  RegexParser.agda
src/Agda/Tool/Parser/Arguments/: Options.agda
src/Agda/Tool/Parser/Combinators/: Char.agda  Core.agda
src/Coq/: _CoqProject  makefile
src/Coq/Derivatives/: Antimirov.v  Brzozowski.v  Smart.v
src/Coq/Syntax/: Regex.v
src/Coq/Tactics/: LibTactics.v
src/Idris/src/: Search.idr  Teste.idr
talks/sblp2017/: makefile  slides.lagda  slides.ptb  slides.tex
talks/sblp2017/auto/: slides.el
tests/: abs.tex  as.tex  benchmark.sh  plot_latex.gp  plot_png.gp
tests/haskell-regex/: haskell-regex.cabal  stack.yaml
tests/haskell-regex/app/: Main.hs
